--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico?imageFilter=convert&f=png&w=32" />
+  <link rel="icon" type="image/svg+xml" href="/public/favicon.ico?imageFilter=resize&w=32" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#4F6AF5" />
 </head>
